file(GLOB children RELATIVE ${CMAKE_CURRENT_LIST_DIR} ${CMAKE_CURRENT_LIST_DIR}/*)

foreach(child ${children})
    if(IS_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/${child})
        if (EXISTS "${CMAKE_CURRENT_LIST_DIR}/${child}/CMakeLists.txt")
            #message("filder; ${child}")
            add_subdirectory(${child})
        endif()
    endif()
endforeach()